--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/*
+font-family: 'Mulish', sans-serif;
+font-family: 'Philosopher', sans-serif;
+*/
 html {
   scroll-behavior: smooth;
 }
@@ -13,7 +17,7 @@ header, footer {
 }
 
 header {
-  font-family: Work Sans;
+  font-family: 'Mulish', sans-serif;
   color: #fff;
   min-height: 100vh;
   display: flex;
@@ -31,7 +35,7 @@ main {
 }
 
 h1 {
-  font-family: Poppins;
+  font-family: 'Philosopher', sans-serif;
   font-size: calc(1em + 3vw);
   padding-bottom: .67em;
   border-bottom: 1px solid;
@@ -39,7 +43,7 @@ h1 {
 }
 
 h2 {
-  font-family: Poppins;
+  font-family: 'Philosopher', sans-serif;
   font-size: 18px;
   font-weight: 600;
   letter-spacing: 0.3px;
@@ -64,7 +68,7 @@ img {
 .bio {
 color: #ffffff;
 font-size: 24px;
-font-family: 'Work Sans';
+font-family: 'Mulish', sans-serif;
 }
 
 .buttonBox {
@@ -115,7 +119,7 @@ font-family: 'Work Sans';
 
 .mins {
   display: inline-block;
-  font-family: Poppins;
+  font-family: 'Philosopher', sans-serif;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.3px;
@@ -126,7 +130,7 @@ font-family: 'Work Sans';
 }
 
 .description {
-  font-family: Work Sans;
+  font-family: 'Mulish', sans-serif;
   font-size: 14px;
   font-weight: 300;
   line-height: 1.29;
