--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 header, footer {
-  background-color: #ffa500;
+  background-color: saddlebrown;
   text-align: left;
   /* min-width: 500px; */
 }
@@ -48,7 +48,7 @@ h2 {
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #ffa500;
+  color: saddlebrown;
   padding: 10px 0px 10px 10px;
 }
 
@@ -103,7 +103,7 @@ font-family: 'Mulish', sans-serif;
 }
 
 .a {
-
+  color: green;
 }
 
 .c {
