--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h2 {
   letter-spacing: 0.3px;
   text-align: left;
   color: saddlebrown;
-  padding: 10px 0px 10px 10px;
+  padding: 10px 20px 0 20px;
 }
 
 img {
@@ -89,12 +89,12 @@ font-family: 'Mulish', sans-serif;
 }
 
 .myButton:hover {
-    background-color: green;
+  background-color: green;
 }
 
 .myButton:active {
-    position:relative;
-    top:1px;
+  position:relative;
+  top:1px;
 }
 
 .recipe {
@@ -137,15 +137,8 @@ font-family: 'Mulish', sans-serif;
   letter-spacing: 0.1px;
   text-align: left;
   color: #4a4a4a;
-  padding: 10px 0px 10px 10px;
+  padding: 0 20px 20px 20px;  
   border-top: 1px solid #4a4a4a;
-}
-
-.logo {
-  width: 115px;
-  height: 21.1px;
-  object-fit: contain;
-  padding: 20px;
 }
 
 .container {
